// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shadow Should parse (shadow) correctly 1`] = `
Object {
  "shadowColor": "#000000",
  "shadowOffset": Object {
    "height": 1,
    "width": 0,
  },
  "shadowOpacity": 0.1,
  "shadowRadius": 3,
}
`;

exports[`shadow Should parse (shadow-2xl) correctly 1`] = `
Object {
  "shadowColor": "#000000",
  "shadowOffset": Object {
    "height": 25,
    "width": 0,
  },
  "shadowOpacity": 0.1,
  "shadowRadius": 50,
}
`;

exports[`shadow Should parse (shadow-lg) correctly 1`] = `
Object {
  "shadowColor": "#000000",
  "shadowOffset": Object {
    "height": 10,
    "width": 0,
  },
  "shadowOpacity": 0.1,
  "shadowRadius": 15,
}
`;

exports[`shadow Should parse (shadow-md) correctly 1`] = `
Object {
  "shadowColor": "#000000",
  "shadowOffset": Object {
    "height": 4,
    "width": 0,
  },
  "shadowOpacity": 0.1,
  "shadowRadius": 6,
}
`;

exports[`shadow Should parse (shadow-none) correctly 1`] = `
Object {
  "shadowColor": "#000000",
  "shadowOffset": Object {
    "height": 0,
    "width": 0,
  },
  "shadowOpacity": 0,
  "shadowRadius": 2,
}
`;

exports[`shadow Should parse (shadow-sm) correctly 1`] = `
Object {
  "shadowColor": "#000000",
  "shadowOffset": Object {
    "height": 1,
    "width": 0,
  },
  "shadowOpacity": 0.05,
  "shadowRadius": 2,
}
`;

exports[`shadow Should parse (shadow-xl) correctly 1`] = `
Object {
  "shadowColor": "#000000",
  "shadowOffset": Object {
    "height": 20,
    "width": 0,
  },
  "shadowOpacity": 0.1,
  "shadowRadius": 25,
}
`;
